# Video-Conferencing

./: .example.env  .gitignore  README.md  Video-Conferencing.code-workspace  docker-compose.dev.yml  docker-compose.yml  social-media.code-workspace
.agent/: instructions.md
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  ci.yaml.disabled  deploy-production.yaml.disabled  deploy-staging.yaml.disabled  deploy.yml
backend/go/: .env.example  Dockerfile  copy.sh  coverage.out  go.mod  go.sum
backend/python/stream-processor/: Dockerfile  PROMPT.md  cc_pb2.py  cc_pb2_grpc.py  main.py  pyproject.toml  transcriber.py
backend/python/stream-processor/proto/: stream_processor_pb2.py  stream_processor_pb2_grpc.py
backend/python/stream-processor/tests/: test_buffering.py  test_concurrency.py  test_e2e.py  test_errors.py  test_integration.py  test_language.py  test_transcriber.py
backend/python/summary-service/: Dockerfile  cc_pb2.py  cc_pb2_grpc.py  main.py  pyproject.toml
backend/python/summary-service/proto/: summary_service_pb2.py  summary_service_pb2_grpc.py
backend/python/summary-service/tests/: test_main.py
backend/rust/sfu/: Cargo.toml  Dockerfile  build.rs  copy.sh  logs.txt  tarpaulin.toml
backend/rust/sfu/benches/: id_benchmark.rs  sfu_benchmarks.rs
backend/rust/sfu/src/: broadcaster.rs  config.rs  health.rs  id_types.rs  integration_tests.rs  lib.rs  logging.rs  main.rs  media_setup.rs  metrics.rs  peer_manager.rs  room_manager.rs  sfu_load_sim.rs  sfu_service.rs  signaling_handler.rs  tests.rs  track_handler.rs  types.rs
backend/rust/sfu/tests/: leak_repro.rs
devops/: .env.example  QUICK_REFERENCE.md  README.md  bootstrap_gitops.sh  deploy.sh  loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo.yaml
devops/argocd/: install.yaml  root-app.yaml
devops/docker/: backend.dockerfile  frontend.dockerfile  rust-sfu.dockerfile  stream-processor.dockerfile  summary-service.dockerfile
devops/grafana/: datasources.yml
devops/kubernetes/: alertmanager.yaml  backend-deployment.yaml  backend-external-secret.example.yaml  backend-hpa.yaml  backend-secrets.yaml  external-secrets.yaml  frontend-deployment.yaml  frontend-hpa.yaml  monitoring.yaml  redis-deployment.yaml  rust-sfu-deployment.yaml  rust-sfu-fleet.yaml  security-policies.yaml
devops/local/: README.md  grafana-dashboards.yml  grafana-datasources.yml
devops/simple/: Caddyfile  README.md  deploy.sh  docker-compose.prod.yaml
devops/terraform/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
docs/: logging-standards.md
docs/runbooks/: alert-backend-down.md  alert-certificate-expiring-soon.md  alert-disk-space-warning.md  alert-grpc-high-error-rate.md  alert-high-latency.md  alert-high-memory.md  alert-high-room-count.md  alert-high-websocket-failure.md  alert-redis-connection-failure.md  alert-rust-sfu-down.md  alert-webrtc-connection-failure-rate.md  rollback.md  secrets-management.md
frontend/: REVIEW.md  copy-frontend.sh  dockerfile  eslint.config.mjs  events.ts  next.config.ts  package-lock.json  package.json  run-tests.sh  vitest.config.mts  vitest.setup.ts
frontend/.storybook/: preview.ts
frontend/__tests__/: README.md  events.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: index.ts  useAudioDetection.ts  useAudioVisualizer.ts  useChat.ts  useDeviceCapabilities.ts  useMediaControls.ts  useMediaStream.ts  useMediaStreamLifecycle.ts  useParticipants.ts  usePermissions.ts  useRoom.ts  useRoomUI.ts
frontend/lib/: RoomClient.ts  api.ts  logger.ts  utils.ts  webrtc.ts  (+1 more)
proto/: cc.proto  sfu.proto  signaling.proto  stream-processor.proto  summary-service.proto
scripts/: codebase-analyzer.sh  dev_all.sh  generate_protos.sh  smoke-tests.sh
(+266 files in other folders)
