[project]
name = "summary-service"
version = "0.1.0"
description = "Meeting Summarization Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "redis>=5.0.1",
    "openai>=1.10.0",
    "grpcio>=1.76.0",
    "grpcio-tools>=1.76.0",
]
