[package]
name = "sfu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.9"
prost = "0.11"

# WebRTC
webrtc = "0.9"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0" # For easy error handling
async-trait = "0.1"
dashmap = "5.0" # Concurrent HashMap (Critical for thread-safe rooms)

[build-dependencies]
tonic-build = "0.9"