[package]
name = "sfu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.9"
prost = "0.11"

# WebRTC
webrtc = "0.9"

# Logging
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0" # For easy error handling
async-trait = "0.1"
dashmap = "5.0" # Concurrent HashMap (Critical for thread-safe rooms)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
tonic-build = "0.9"