[package]
name = "sfu"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC
tonic = "0.9"
tonic-health = "0.9"
prost = "0.11"
bytes = "1.0"

# WebRTC
webrtc = "0.9"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0" # For easy error handling
async-trait = "0.1"
dashmap = "5.0" # Concurrent HashMap (Critical for thread-safe rooms)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"
warp = "0.3"
tower = "0.5.3"
tower-layer = "0.3.3"


[build-dependencies]
tonic-build = "0.9"
prost-build = "0.14.3"


[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
rand = "0.8"

[[bench]]
name = "sfu_benchmarks"
harness = false

[[bin]]
name = "sfu_load_sim"
path = "src/sfu_load_sim.rs"
